[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://map.tscn" type="PackedScene" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/buttons/up.svg" type="Texture" id=4]
[ext_resource path="res://assets/buttons/left.svg" type="Texture" id=5]
[ext_resource path="res://assets/buttons/right.svg" type="Texture" id=6]
[ext_resource path="res://map.gd" type="Script" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" parent="." instance=ExtResource( 2 )]
position = Vector2( -1.41422, 1.41422 )
tile_data = PoolIntArray( -1179532, 3, 0, -1113998, 3, 0, -1113997, 3, 0, -1048463, 3, 0, -982929, 3, 0, -982928, 3, 0, -917395, 3, 0, -917394, 3, 0, -851860, 3, 0, -786326, 3, 0, -786325, 3, 0, -720791, 3, 0, -655257, 3, 0, -655256, 3, 0, -589723, 3, 0, -589722, 3, 0, -524188, 3, 0, -458654, 3, 0, -458653, 3, 0, -393119, 3, 0, -327585, 3, 0, -327584, 3, 0, -262051, 3, 0, -262050, 3, 0, -196516, 3, 0, -130982, 3, 0, -130981, 3, 0, -65449, 3, 0, -65448, 3, 0, -65447, 3, 0, 65535, -1610612735, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 85, 3, 0, 86, 3, 0, 131071, -1610612735, 0, 65619, 3, 0, 65620, 3, 0, 196607, -1610612735, 0, 131074, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131116, -1073741823, 0, 131117, 1, 0, 131118, 1, 0, 131119, 1, 0, 131120, 1, 0, 131128, -1073741823, 0, 131153, 3, 0, 131154, 3, 0, 262143, -1610612735, 0, 196633, -1073741823, 0, 196637, -1073741823, 0, 196638, 1, 0, 196652, -1073741823, 0, 196664, -1073741823, 0, 196687, 3, 0, 196688, 3, 0, 327679, -1610612735, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262168, -1073741823, 0, 262200, -1073741823, 0, 262221, 3, 0, 262222, 3, 0, 393215, -1610612735, 0, 327697, -1073741823, 0, 327700, -1610612735, 0, 327705, -1073741823, 0, 327711, -536870911, 0, 327727, 1, 0, 327729, 1, 0, 327730, 1, 0, 327731, 1, 0, 327732, 1, 0, 327755, 3, 0, 327756, 3, 0, 458751, -1610612735, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393233, -1073741823, 0, 393236, -1610612735, 0, 393241, -1073741823, 0, 393247, -536870911, 0, 393253, -1073741822, 0, 393254, -1073741822, 0, 393260, -1073741823, 0, 393263, -1073741823, 0, 393275, -1073741823, 0, 393289, 3, 0, 393290, 3, 0, 524287, -1610612735, 0, 458761, -1073741823, 0, 458764, -1610612735, 0, 458769, -1073741823, 0, 458772, -1610612735, 0, 458777, -1073741823, 0, 458783, -536870911, 0, 458789, -1073741822, 0, 458790, -1073741822, 0, 458796, -1073741823, 0, 458799, -1073741823, 0, 458811, -1073741823, 0, 458823, 3, 0, 458824, 3, 0, 589823, -1610612735, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 1, 0, 524335, 1, 0, 524336, 1, 0, 524337, 1, 0, 524338, 1, 0, 524339, 1, 0, 524340, 1, 0, 524341, 1, 0, 524342, 1, 0, 524343, 1, 0, 524344, 1, 0, 524345, 1, 0, 524346, 1, 0, 524347, 1, 0, 524348, 1, 0, 524349, 1, 0, 524350, 1, 0, 524351, 1, 0, 524352, 1, 0, 524353, 1, 0, 524354, 1, 0, 524355, 1, 0, 524356, 1, 0, 524357, 1, 0, 524358, 1, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 2, 0, 589856, 2, 0, 589857, 2, 0, 589858, 2, 0, 589859, 2, 0, 589860, 2, 0, 589861, 2, 0, 589862, 2, 0, 589863, 2, 0, 589864, 2, 0, 589865, 2, 0, 589866, 2, 0, 589867, 2, 0, 589868, 2, 0, 589869, 2, 0, 589870, 2, 0, 589871, 2, 0, 589872, 2, 0, 589873, 2, 0, 589874, 2, 0, 589875, 2, 0, 589876, 2, 0, 589877, 2, 0, 589878, 2, 0, 589879, 2, 0, 589880, 2, 0, 589881, 2, 0, 589882, 2, 0, 589883, 2, 0, 589884, 2, 0, 589885, 2, 0, 589886, 2, 0, 589887, 2, 0, 589888, 2, 0, 589889, 2, 0, 589890, 2, 0, 589891, 2, 0, 589892, 2, 0, 589893, 2, 0, 589894, 2, 0, 589895, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655386, 2, 0, 655387, 2, 0, 655388, 2, 0, 655389, 2, 0, 655390, 2, 0, 655391, 2, 0, 655392, 2, 0, 655393, 2, 0, 655394, 2, 0, 655395, 2, 0, 655396, 2, 0, 655397, 2, 0, 655398, 2, 0, 655399, 2, 0, 655400, 2, 0, 655401, 2, 0, 655402, 2, 0, 655403, 2, 0, 655404, 2, 0, 655405, 2, 0, 655406, 2, 0, 655407, 2, 0, 655408, 2, 0, 655409, 2, 0, 655410, 2, 0, 655411, 2, 0, 655412, 2, 0, 655413, 2, 0, 655414, 2, 0, 655415, 2, 0, 655416, 2, 0, 655417, 2, 0, 655418, 2, 0, 655419, 2, 0, 655420, 2, 0, 655421, 2, 0, 655422, 2, 0, 655423, 2, 0, 655424, 2, 0, 655425, 2, 0, 655426, 2, 0, 655427, 2, 0, 655428, 2, 0, 655429, 2, 0, 655430, 2, 0, 655431, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 2, 0, 720929, 2, 0, 720930, 2, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 720934, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 720938, 2, 0, 720939, 2, 0, 720940, 2, 0, 720941, 2, 0, 720942, 2, 0, 720943, 2, 0, 720944, 2, 0, 720945, 2, 0, 720946, 2, 0, 720947, 2, 0, 720948, 2, 0, 720949, 2, 0, 720950, 2, 0, 720951, 2, 0, 720952, 2, 0, 720953, 2, 0, 720954, 2, 0, 720955, 2, 0, 720956, 2, 0, 720957, 2, 0, 720958, 2, 0, 720959, 2, 0, 720960, 2, 0, 720961, 2, 0, 720962, 2, 0, 720963, 2, 0, 720964, 2, 0, 720965, 2, 0, 720966, 2, 0, 720967, 2, 0 )
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_top = 1.41422
margin_right = 1024.0
margin_bottom = 601.414
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TouchScreenButton" parent="CanvasLayer/Control"]
position = Vector2( 91.5721, 374.462 )
scale = Vector2( 2.08456, 2.00113 )
normal = ExtResource( 5 )
action = "ui_left"

[node name="RightButton" type="TouchScreenButton" parent="CanvasLayer/Control"]
position = Vector2( 268.572, 374.462 )
scale = Vector2( 2.08456, 2.00113 )
normal = ExtResource( 6 )
action = "ui_right"

[node name="JumpButton" type="TouchScreenButton" parent="CanvasLayer/Control"]
position = Vector2( 800.572, 374.462 )
scale = Vector2( 2.08456, 2.00113 )
normal = ExtResource( 4 )
action = "jump"

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_left = 24.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 448.0
margin_right = 640.0
margin_bottom = 63.0
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
margin_left = 224.0
margin_top = 10.0
margin_right = 272.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 280 )
contacts_reported = 50
[connection signal="pressed" from="CanvasLayer/Control/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="Player" to="." method="_on_Player_body_exited"]
